# QuickJS-Android

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/viper/android/quickjs/playground/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/viper/android/quickjs/playground/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/viper/android/quickjs/playground/: ExampleUnitTest.java
engine/: CMakeLists.txt  build.gradle  publish.gradle
engine/src/androidTest/java/com/viper/android/quickjs/engine/: ExampleInstrumentedTest.java
engine/src/main/: AndroidManifest.xml
engine/src/main/cpp/: native-lib.cpp  quickjs_jni.cpp
engine/src/main/java/com/viper/android/quickjs/engine/: QuickJS.java
engine/src/test/java/com/viper/android/quickjs/engine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
